--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,19 @@
 title: Roman Tremmel
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Personal website
 
 # Your name to show in the footer
-author: Some Person
+author: Roman Tremml
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  #Resources:
+  #  - Beautiful Jekyll: "https://beautifuljekyll.com"
+  # - Learn markdown: "https://www.markdowntutorial.com/"
+#  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
