--- a/_config.yml
+++ b/_config.yml
@@ -43,10 +43,10 @@ social-network-links:
   github: daattali
   twitter: daattali
   rss: true
-#  reddit: yourname
+  reddit: https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de
 #  linkedin: daattali
 #  xing: yourname
-#  stackoverflow: "3943160/daattali"
+   stackoverflow: "4870695/roman"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  youtube: user/deanat78
