--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social-network-links:
   github: daattali
   twitter: daattali
   rss: true
-  reddit: https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de
+#  reddit: https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de
 #  linkedin: daattali
 #  xing: yourname
    stackoverflow: "4870695/roman"
