--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Roman Tremmel
 description: Personal website
 
 # Your name to show in the footer
-author: Roman Tremml
+author: Roman Tremmel
 
 # --- List of links in the navigation bar --- #
 
@@ -25,7 +25,7 @@ navbar-links:
 avatar: "/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
-round-avatar: false
+round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -38,7 +38,7 @@ round-avatar: false
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
+  email: "roman.tremmel (at) ikp-stuttgart (dot) com"
   facebook: deanattali
   github: daattali
   twitter: daattali
