--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social-network-links:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "romantremmel.de"
+# url-pretty: "romantremmel.de"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
