--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ author: Roman Tremmel
 
 navbar-links:
   About Me: "aboutme"
+  Work: "work"
   #Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   # - Learn markdown: "https://www.markdowntutorial.com/"
