--- a/_config.yml
+++ b/_config.yml
@@ -66,11 +66,11 @@ excerpt_length: 50
 
 # --- Colours / background image --- #
 
-# Personalize the colors in your website. Colour values can be any valid CSS colour
+# Personalize the colors in your website. Colour values can be any valid CSS colour#EAEAEA
 
-navbar-col: "#80bde8"
+navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
-navbar-border-col: "#EAEAEA"
+navbar-border-col: "#80bde8"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
