--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ excerpt_length: 50
 
 # --- Colours / background image --- #
 
-# Personalize the colors in your website. Colour values can be any valid CSS colour#EAEAEA
+# Personalize the colors in your website. Colour values can be any valid CSS colour#EAEAEA#F5F5F5
 
-navbar-col: "#F5F5F5"
+navbar-col: "#80bde8"
 navbar-text-col: "#404040"
 navbar-border-col: "#80bde8"
 page-col: "#FFFFFF"
