--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Roman Tremmel
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Blog: "https://roman-tremmel.github.io/rtremmel/"
+  Home: "https://roman-tremmel.github.io/rtremmel/"
   Work: "work"
   About Me: "aboutme"
   #Resources:
@@ -67,11 +67,11 @@ excerpt_length: 50
 
 # --- Colours / background image --- #
 
-# Personalize the colors in your website. Colour values can be any valid CSS colour#EAEAEA#F5F5F5
+# Personalize the colors in your website. Colour values can be any valid CSS colour#F5F5F5
 
 navbar-col: "#80bde8"
 navbar-text-col: "#404040"
-navbar-border-col: "#80bde8"
+navbar-border-col: "#EAEAEA"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
