--- a/_config.yml
+++ b/_config.yml
@@ -69,13 +69,13 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour#F5F5F5
 
-navbar-col: "#a9c4c9"
+navbar-col: "#edf5fa"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#a9c4c9"
+footer-col: "#edf5fa"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
