--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ footer-link-col: "#404040"
 # --- Comments --- #
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-disqus: "disqus_X5N1pTplQe"
+disqus: "Roman"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 #fb_comment_id: ""
