--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ social-network-links:
 
 # Select which social network share links to show in posts
 #share-links-active:
-#  twitter: true
+twitter: true
 #  facebook: true
 #  linkedin: true
 #  vk: false
