--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ social-network-links:
   email: "roman.tremmel (at) ikp-stuttgart (dot) com"
   github: roman-tremmel
   stackoverflow: "4870695/roman"
+  loop: https://loop.frontiersin.org/people/649624/overview
 #  reddit: https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de
 
 
