--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ social-network-links:
   github: roman-tremmel
   stackoverflow: "4870695/roman"
   loop: https://loop.frontiersin.org/people/649624/overview
+  google_scholar: https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de
 #  reddit: https://scholar.google.com/citations?user=-5BC9nwAAAAJ&hl=de
 
 
